objects/Account.object
<CustomObject><fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>ClosedWonTotal__c</fullName>
        <label>Closed Won Total</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Closed_Lost_Total__c</fullName>
        <label>Closed Lost Amount</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,"All Account Details Captured", "Missing: "&amp;IF( ISPICKVAL( Industry,""),"Industry, ","")&amp;""&amp;IF(ISPICKVAL(Rating,""), "Rating, ","")&amp;""&amp;IF( LEN(BillingCity) = 0, "Complete Address, ","")&amp;""&amp;IF( LEN(Phone) = 0, "Phone, ","")&amp;""&amp;IF( ISPICKVAL(Type,""), "Type",""))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Industry,""), 0,20) + IF( ISPICKVAL(Rating,""), 0,20) + IF( LEN(BillingCity) = 0, 0,20) + IF(LEN(Phone) = 0, 0,20) + IF( ISPICKVAL(Type,""), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Initial_Ancestor_Account__c</fullName>
        <description>Ultimate parent account id field</description>
        <formula>if(ParentId = Null, Id, 
        if(Parent.ParentId = Null, Parent.Id, 
                if(Parent.Parent.ParentId = Null, Parent.Parent.Id, 
                        if(Parent.Parent.Parent.ParentId = Null, Parent.Parent.Parent.Id, 
                                if(Parent.Parent.Parent.Parent.ParentId = Null, Parent.Parent.Parent.Parent.Id, 
                                        if(Parent.Parent.Parent.Parent.Parent.ParentId = Null, Parent.Parent.Parent.Parent.Parent.Id, 
                                                if(Parent.Parent.Parent.Parent.Parent.Parent.ParentId = Null, Parent.Parent.Parent.Parent.Parent.Parent.Id, 
                                                        if(Parent.Parent.Parent.Parent.Parent.Parent.Parent.ParentId = Null, Parent.Parent.Parent.Parent.Parent.Parent.Parent.Id, 
                                                                if(Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.ParentId = Null, Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Id, 
                                                                        if(Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.ParentId = Null, Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Id, 
                                                                                if(Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.ParentId = Null, Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Id, 
                                                                                        Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Id
                                                                                )
                                                                        )   
                                                                )   
                                                        )   
                                                )   
                                        )   
                                )   
                        )   
                )   
        )   
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>if(ParentId=null, Id, 
if(Parent.ParentId=null, Parent.Id, Parent.ParentId) )</inlineHelpText>
        <label>Initial Ancestor Account</label>
        <type>Text</type>
    </fields><fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Total_Open_Deal_Amount__c</fullName>
        <description>Total Amount of Open Deals of This Account</description>
        <inlineHelpText>Total Amount of Open Deals of This Account</inlineHelpText>
        <label>Total Open Deal Amount</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsClosed</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>region__c</fullName>
        <label>region</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>testVF_subindustry__c</fullName>
        <description>sub industry test to industry</description>
        <label>testVF_subindustry</label>
        <picklist>
            <controllingField>Industry</controllingField>
            <picklistValues>
                <fullName>man</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>woman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>children</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>old folks</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>total_deals_amount_open_closed__c</fullName>
        <label>Total Deals Amount (Open and Closed)</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><compactLayoutAssignment>yhCompactLayout</compactLayoutAssignment><enableFeeds>true</enableFeeds><enableHistory>true</enableHistory><recordTypeTrackFeedHistory>false</recordTypeTrackFeedHistory><recordTypeTrackHistory>false</recordTypeTrackHistory><sharingModel>Private</sharingModel><listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>region__c</field>
            <operation>equals</operation>
            <value>APAC</value>
        </filters>
        <filters>
            <field>PARENT_NAME</field>
            <operation>equals</operation>
            <value>Chinese Communist Party</value>
        </filters>
        <label>All Accounts</label>
    </listViews><listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>ACCOUNT.TYPE</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews><listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews><listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews><listViews>
        <fullName>Org_Account_Hierarchy</fullName>
        <columns>Initial_Ancestor_Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>Org_Account_Hierarchy</label>
    </listViews><listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews><listViews>
        <fullName>UD_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Total_Open_Deal_Amount__c</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>UD</value>
        </filters>
        <label>UD Accounts</label>
    </listViews><recordTypes>
        <fullName>CSGAccount</fullName>
        <active>true</active>
        <label>CSGAccount</label>
    </recordTypes><validationRules>
        <fullName>yhAccountNameNoSpecialChar</fullName>
        <active>true</active>
        <description>no special char allowed</description>
        <errorConditionFormula>NOT(REGEX( Name , "[ 0-9a-zA-Z]*"))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>account name can't contain special characters. Only letter or digit are allowed.</errorMessage>
    </validationRules><validationRules>
        <fullName>yhAccountNameTooLong</fullName>
        <active>false</active>
        <description>account name can't be longer than 100 chars</description>
        <errorConditionFormula>len(Name ) &gt; 100</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>account name can't be longer than 100 chars</errorMessage>
    </validationRules></CustomObject>